--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,22 @@
-<div class="container">
+<div class="container py-3">
+  <div class="row">
+    <div class="card">
+      <div style="display: block;">
+        <canvas baseChart width="1000" height="400"
+                [datasets]="lineChartData"
+                [labels]="lineChartLabels"
+                [options]="lineChartOptions"
+                [colors]="lineChartColors"
+                [legend]="lineChartLegend"
+                [chartType]="lineChartType"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)"></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="row py-3">
+    <div class="card">
 
+    </div>
+  </div>
 </div>
