--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,8 +7,8 @@
     <mat-nav-list>
       <h2 matSubheader>Main menu</h2>
       <a mat-list-item routerLink="dashboard" routerLinkActive="active"><mat-icon matListIcon class="app-nav-list-icon mr-1">dashboard</mat-icon>Dashboard</a>
-      <a mat-list-item href="#"><mat-icon matListIcon class="app-nav-list-icon mr-1">shopping_cart</mat-icon>Orders</a>
-      <a mat-list-item href="#"><mat-icon matListIcon class="app-nav-list-icon mr-1">people</mat-icon>Customers</a>
+      <a mat-list-item routerLink="orders" routerLinkActive="active"><mat-icon matListIcon class="app-nav-list-icon mr-1">shopping_cart</mat-icon>Orders</a>
+      <a mat-list-item routerLink="customers" routerLinkActive="active"><mat-icon matListIcon class="app-nav-list-icon mr-1">people</mat-icon>Customers</a>
       <a mat-list-item href="#"><mat-icon matListIcon class="app-nav-list-icon mr-1">equalizer</mat-icon>Reports</a>
       <a mat-list-item href="#"><mat-icon matListIcon class="app-nav-list-icon mr-1">layers</mat-icon>Integrations</a>
       <hr>
